Bug 313485 - Muon crashed whenchecking for updates after changing selecrted software
Summary: Muon crashed whenchecking for updates after changing selecrted software
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 313866 314112 314287 314823 315600 316317 316433 316505 316526 316531 316641 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-19 09:10 UTC by Jussi Schultink
Modified: 2016-03-02 13:25 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.15 KB, text/plain)
2013-03-16 16:09 UTC, Arthur Brownlee IV
Details
New crash information added by DrKonqi (8.71 KB, text/plain)
2013-04-25 19:16 UTC, Ettore Atalan
Details
New crash information added by DrKonqi (14.74 KB, text/plain)
2013-04-28 13:28 UTC, dva.lider
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jussi Schultink 2013-01-19 09:10:46 UTC
Application: muon-updater (1.9.65)
KDE Platform Version: 4.9.97
Qt Version: 4.8.3
Operating System: Linux 3.5.0-21-generic i686
Distribution: Ubuntu 12.10

-- Information about the crash:
- What I was doing when the application crashed:
I had been trying to select different items - I thnk some of them had conflicts and so deselected others. I then thought to check for updates in case the list was stale and when I did so it crashed. 
- Custom settings of the application:

Some extra PPA's enabled, including shadeslayers daily telepathy builds, which were the confilcting packages in question.

-- Backtrace:
Application: Muon Update Manager (muon-updater), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb45a1980 (LWP 5979))]

Thread 3 (Thread 0xb1f36b40 (LWP 5980)):
#0  0xb77b2424 in __kernel_vsyscall ()
#1  0xb5ce45f0 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0xb4ffd74b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb4feed00 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0xb4feee61 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0xb6b1499f in QEventDispatcherGlib::processEvents (this=0xb1600468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0xb6ae126c in QEventLoop::processEvents (this=this@entry=0xb1f36228, flags=...) at kernel/qeventloop.cpp:149
#7  0xb6ae1561 in QEventLoop::exec (this=0xb1f36228, flags=...) at kernel/qeventloop.cpp:204
#8  0xb69cc66c in QThread::exec (this=0x98813e0) at thread/qthread.cpp:501
#9  0xb6abf7bd in QInotifyFileSystemWatcherEngine::run (this=0x98813e0) at io/qfilesystemwatcher_inotify.cpp:248
#10 0xb69cfa58 in QThreadPrivate::start (arg=0x98813e0) at thread/qthread_unix.cpp:338
#11 0xb50bed4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0xb5cf2d3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 2 (Thread 0xb08c5b40 (LWP 5984)):
#0  0xb4fee500 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#1  0xb4feebff in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#2  0xb4feee61 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0xb6b1499f in QEventDispatcherGlib::processEvents (this=0xaff00468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0xb6ae126c in QEventLoop::processEvents (this=this@entry=0xb08c5228, flags=...) at kernel/qeventloop.cpp:149
#5  0xb6ae1561 in QEventLoop::exec (this=0xb08c5228, flags=...) at kernel/qeventloop.cpp:204
#6  0xb69cc66c in QThread::exec (this=0x9aa20a0) at thread/qthread.cpp:501
#7  0xb6abf7bd in QInotifyFileSystemWatcherEngine::run (this=0x9aa20a0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0xb69cfa58 in QThreadPrivate::start (arg=0x9aa20a0) at thread/qthread_unix.cpp:338
#9  0xb50bed4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#10 0xb5cf2d3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb45a1980 (LWP 5979)):
[KCrash Handler]
#7  0xb7355d40 in FindPkg (Name=..., this=<optimized out>) at /usr/include/apt-pkg/depcache.h:348
#8  QApt::Backend::package (this=0x9860000, name=...) at /build/buildd/qapt-1.9.65/src/backend.cpp:339
#9  0xb7355e28 in QApt::Backend::package (this=0x9860000, name=...) at /build/buildd/qapt-1.9.65/src/backend.cpp:332
#10 0xb7748bd9 in Application::package (this=0xa60e360) at /build/buildd/muon-1.9.65/libmuon/ApplicationBackend/Application.cpp:131
#11 0x0805b4f7 in UpdaterWidget::populateUpdateModel (this=0x9877a78) at /build/buildd/muon-1.9.65/updater/UpdaterWidget.cpp:163
#12 0x08056040 in MainWindow::reload (this=this@entry=0x981b498) at /build/buildd/muon-1.9.65/updater/MainWindow.cpp:245
#13 0x08056119 in MainWindow::transactionStatusChanged (this=0x981b498, status=QApt::FinishedStatus) at /build/buildd/muon-1.9.65/updater/MainWindow.cpp:213
#14 0xb6afaed6 in QMetaObject::activate (sender=0xa0859f8, m=0xb7398d78 <QApt::Transaction::staticMetaObject>, local_signal_index=1, argv=0xbfde8928) at kernel/qobject.cpp:3547
#15 0xb73816a5 in QApt::Transaction::statusChanged (this=0xa0859f8, _t1=QApt::FinishedStatus) at /build/buildd/qapt-1.9.65/obj-i686-linux-gnu/src/moc_transaction.cxx:285
#16 0xb737c43f in QApt::Transaction::updateProperty (this=0xa0859f8, type=0, variant=...) at /build/buildd/qapt-1.9.65/src/transaction.cpp:497
#17 0xb7381c0e in QApt::Transaction::qt_static_metacall (_o=0xa0859f8, _c=QMetaObject::InvokeMetaMethod, _id=23, _a=0xbfde8bb4) at /build/buildd/qapt-1.9.65/obj-i686-linux-gnu/src/moc_transaction.cxx:160
#18 0xb6afaed6 in QMetaObject::activate (sender=0xa0745c8, m=0xb7398dd8 <OrgKubuntuQaptworkerTransactionInterface::staticMetaObject>, local_signal_index=4, argv=0xbfde8bb4) at kernel/qobject.cpp:3547
#19 0xb7382b1d in OrgKubuntuQaptworkerTransactionInterface::propertyChanged (this=0xa0745c8, _t1=3, _t2=...) at /build/buildd/qapt-1.9.65/obj-i686-linux-gnu/src/moc_transactiondbus.cxx:240
#20 0xb7382e06 in OrgKubuntuQaptworkerTransactionInterface::qt_static_metacall (_o=0xa0745c8, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfde8edc) at /build/buildd/qapt-1.9.65/obj-i686-linux-gnu/src/moc_transactiondbus.cxx:108
#21 0xb73839d7 in OrgKubuntuQaptworkerTransactionInterface::qt_metacall (this=0xa0745c8, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfde8edc) at /build/buildd/qapt-1.9.65/obj-i686-linux-gnu/src/moc_transactiondbus.cxx:159
#22 0xb594a6ae in QDBusConnectionPrivate::deliverCall (this=0x9837310, object=0xa0745c8, msg=..., metaTypes=..., slotIdx=-1075935652) at qdbusintegrator.cpp:947
#23 0xb5954d0d in QDBusCallDeliveryEvent::placeMetaCall (this=0x98a62b0, object=0xa0745c8) at qdbusintegrator_p.h:103
#24 0xb6af8eeb in QObject::event (this=0xa0745c8, e=0x98a62b0) at kernel/qobject.cpp:1195
#25 0xb5fd239c in QApplicationPrivate::notify_helper (this=0x96e3aa0, receiver=0xa0745c8, e=0x98a62b0) at kernel/qapplication.cpp:4562
#26 0xb5fd6daf in QApplication::notify (this=0x98a62b0, receiver=0xa0745c8, e=0x98a62b0) at kernel/qapplication.cpp:3944
#27 0xb70f32b1 in KApplication::notify (this=0xbfde9740, receiver=0xa0745c8, event=0x98a62b0) at ../../kdeui/kernel/kapplication.cpp:311
#28 0xb6ae278e in QCoreApplication::notifyInternal (this=0xbfde9740, receiver=0xa0745c8, event=0x98a62b0) at kernel/qcoreapplication.cpp:915
#29 0xb6ae697d in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#30 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x96b9298) at kernel/qcoreapplication.cpp:1539
#31 0xb6ae6c0c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1432
#32 0xb6b14804 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#33 postEventSourceDispatch (s=0x96e43b8) at kernel/qeventdispatcher_glib.cpp:279
#34 0xb4fee9e3 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#35 0xb4feed80 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#36 0xb4feee61 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#37 0xb6b14981 in QEventDispatcherGlib::processEvents (this=0x96b9e50, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#38 0xb60889aa in QGuiEventDispatcherGlib::processEvents (this=0x96b9e50, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#39 0xb6ae126c in QEventLoop::processEvents (this=this@entry=0xbfde9678, flags=...) at kernel/qeventloop.cpp:149
#40 0xb6ae1561 in QEventLoop::exec (this=0xbfde9678, flags=...) at kernel/qeventloop.cpp:204
#41 0xb6ae6cba in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#42 0xb5fcffc4 in QApplication::exec () at kernel/qapplication.cpp:3823
#43 0x0805365b in main (argc=1, argv=0xbfde9814) at /build/buildd/muon-1.9.65/updater/main.cpp:61

Possible duplicates by query: bug 294539.

Reported using DrKonqi
Comment 1 Jonathan Thomas 2013-01-25 04:42:51 UTC
*** Bug 313866 has been marked as a duplicate of this bug. ***
Comment 2 Jekyll Wu 2013-03-04 03:00:24 UTC
*** Bug 315600 has been marked as a duplicate of this bug. ***
Comment 3 Jekyll Wu 2013-03-04 03:00:26 UTC
*** Bug 314287 has been marked as a duplicate of this bug. ***
Comment 4 Jekyll Wu 2013-03-04 03:00:32 UTC
*** Bug 314112 has been marked as a duplicate of this bug. ***
Comment 5 Jekyll Wu 2013-03-11 13:08:03 UTC
*** Bug 316531 has been marked as a duplicate of this bug. ***
Comment 6 Jonathan Thomas 2013-03-11 22:07:41 UTC
*** Bug 314823 has been marked as a duplicate of this bug. ***
Comment 7 Jonathan Thomas 2013-03-11 22:08:02 UTC
*** Bug 316433 has been marked as a duplicate of this bug. ***
Comment 8 Jonathan Thomas 2013-03-11 22:08:25 UTC
*** Bug 316505 has been marked as a duplicate of this bug. ***
Comment 9 Jonathan Thomas 2013-03-11 22:08:53 UTC
*** Bug 316526 has been marked as a duplicate of this bug. ***
Comment 10 Jonathan Thomas 2013-03-11 22:09:33 UTC
*** Bug 316317 has been marked as a duplicate of this bug. ***
Comment 11 Jonathan Thomas 2013-03-12 14:44:29 UTC
Git commit 06eb4893fe05e7f4dfbe40f9be1f9ddea55285f7 by Jonathan Thomas.
Committed on 11/03/2013 at 23:12.
Pushed by jmthomas into branch '2.0'.

Properly asynchronize the reloading of the APT backend, fixing a crash.
FIXED-IN:2.0.0

M  +3    -2    updater/UpdaterWidget.cpp

http://commits.kde.org/muon/06eb4893fe05e7f4dfbe40f9be1f9ddea55285f7
Comment 12 Arthur Brownlee IV 2013-03-16 16:09:06 UTC
Created attachment 78111 [details]
New crash information added by DrKonqi

muon-updater (1.9.97) on KDE Platform 4.10.1 using Qt 4.8.4

Launched Muon Update application and refreshed the package list to check for updates.

-- Backtrace (Reduced):
#6  QApt::Package::state (this=0x0) at /build/buildd/qapt-1.9.97/src/package.cpp:716
#7  0x00007f4217fae321 in Application::state (this=<optimized out>) at /build/buildd/muon-1.9.97/libmuon/backends/ApplicationBackend/Application.cpp:474
#8  0x00007f422bd6290d in AbstractResource::canUpgrade (this=<optimized out>) at /build/buildd/muon-1.9.97/libmuon/resources/AbstractResource.cpp:44
#9  0x00007f4217fa7fc0 in ApplicationBackend::updatesCount (this=<optimized out>) at /build/buildd/muon-1.9.97/libmuon/backends/ApplicationBackend/ApplicationBackend.cpp:503
#10 0x00000000004149a1 in UpdaterWidget::populateUpdateModel (this=0xba7040) at /build/buildd/muon-1.9.97/updater/UpdaterWidget.cpp:157
Comment 13 Jekyll Wu 2013-04-05 06:27:15 UTC
*** Bug 316641 has been marked as a duplicate of this bug. ***
Comment 14 Ettore Atalan 2013-04-25 19:16:13 UTC
Created attachment 79447 [details]
New crash information added by DrKonqi

muon-updater (1.9.97) on KDE Platform 4.10.2 using Qt 4.8.3

- What I was doing when the application crashed:

I've started a 'check for updates' manually and seconds later Muon crashed.

-- Backtrace (Reduced):
#7  0x000000000041445b in invokeMethod (val9=..., val8=..., val7=..., val6=..., val5=..., val4=..., val3=..., val2=..., val1=..., val0=..., type=Qt::QueuedConnection, member=0x41b979 "reload", obj=<optimized out>) at /usr/include/qt4/QtCore/qobjectdefs.h:418
#8  UpdaterWidget::reload (this=0x1ea6b40) at /build/buildd/muon-1.9.97/updater/UpdaterWidget.cpp:148
#9  0x0000000000410284 in MainWindow::reload (this=0x1dcaf50) at /build/buildd/muon-1.9.97/updater/MainWindow.cpp:196
#10 0x000000000041032a in MainWindow::transactionStatusChanged (this=0x1dcaf50, status=<optimized out>) at /build/buildd/muon-1.9.97/updater/MainWindow.cpp:164
[...]
#12 0x00007fefd166e6a1 in QApt::Transaction::statusChanged (this=<optimized out>, _t1=QApt::FinishedStatus) at /build/buildd/qapt-1.9.97/obj-x86_64-linux-gnu/src/moc_transaction.cxx:285
Comment 15 dva.lider 2013-04-28 13:28:29 UTC
Created attachment 79514 [details]
New crash information added by DrKonqi

muon-updater (2.0.0) on KDE Platform 4.10.2 using Qt 4.8.4

Application: Модуль Muon для управления обновлениями (muon-updater), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f4cf60767c0 (LWP 14700))]

Thread 4 (Thread 0x7f4ce1254700 (LWP 14704)):
#0  0x00007f4ceed55135 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f4ceed55304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f4cf358b036 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007f4cf355b38f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f4cf355b618 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f4cf345d410 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f4cf353cedf in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f4cf345fbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f4cef227f8e in start_thread (arg=0x7f4ce1254700) at pthread_create.c:311
#9  0x00007f4cf2e12e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 3 (Thread 0x7f4cd8b02700 (LWP 14711)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:238
#1  0x00007f4cf34600a7 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007f4cf345364f in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007f4cf345fbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f4cef227f8e in start_thread (arg=0x7f4cd8b02700) at pthread_create.c:311
#5  0x00007f4cf2e12e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 2 (Thread 0x7f4ccfb71700 (LWP 14712)):
#0  0x00007f4ceed54b03 in g_main_context_query () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f4ceed5514c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f4ceed55304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f4cf358b036 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#4  0x00007f4cf355b38f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007f4cf355b618 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007f4cf345d410 in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#7  0x00007f4cf353cedf in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#8  0x00007f4cf345fbec in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#9  0x00007f4cef227f8e in start_thread (arg=0x7f4ccfb71700) at pthread_create.c:311
#10 0x00007f4cf2e12e1d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

Thread 1 (Thread 0x7f4cf60767c0 (LWP 14700)):
[KCrash Handler]
#5  0x00007f4cf3566c4e in QMetaObject::invokeMethod(QObject*, char const*, Qt::ConnectionType, QGenericReturnArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument, QGenericArgument) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x000000000041404b in ?? ()
#7  0x000000000040ffc4 in ?? ()
#8  0x000000000041007a in ?? ()
#9  0x00007f4cf35710ef in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#10 0x00007f4cf50a9681 in QApt::Transaction::statusChanged(QApt::TransactionStatus) () from /usr/lib/libqapt.so.2
#11 0x00007f4cf50a43b8 in QApt::Transaction::updateProperty(int, QDBusVariant const&) () from /usr/lib/libqapt.so.2
#12 0x00007f4cf50a9a58 in ?? () from /usr/lib/libqapt.so.2
#13 0x00007f4cf35710ef in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#14 0x00007f4cf50aa636 in ?? () from /usr/lib/libqapt.so.2
#15 0x00007f4cf50aa8ba in ?? () from /usr/lib/libqapt.so.2
#16 0x00007f4cf50ab31f in ?? () from /usr/lib/libqapt.so.2
#17 0x00007f4cf2612063 in ?? () from /usr/lib/x86_64-linux-gnu/libQtDBus.so.4
#18 0x00007f4cf35765be in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#19 0x00007f4cf3f458ec in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#20 0x00007f4cf3f4825b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#21 0x00007f4cf4c52af6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#22 0x00007f4cf355c63e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#23 0x00007f4cf3560171 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#24 0x00007f4cf358ae83 in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#25 0x00007f4ceed54f05 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f4ceed55248 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f4ceed55304 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f4cf358b016 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#29 0x00007f4cf3feb1ae in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#30 0x00007f4cf355b38f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#31 0x00007f4cf355b618 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#32 0x00007f4cf3560cf6 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#33 0x000000000040e547 in ?? ()
#34 0x00007f4cf2d3aea5 in __libc_start_main (main=0x40e2b0, argc=1, ubp_av=0x7fff2914d028, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff2914d018) at libc-start.c:260
#35 0x000000000040e5b9 in _start ()

-- Backtrace (Reduced):
#7  0x000000000041404b in invokeMethod (val9=..., val8=..., val7=..., val6=..., val5=..., val4=..., val3=..., val2=..., val1=..., val0=..., type=Qt::QueuedConnection, member=0x41bdf2 "reload", obj=<optimized out>) at /usr/include/qt4/QtCore/qobjectdefs.h:418
#8  UpdaterWidget::reload (this=0x15c53f0) at /build/buildd/muon-2.0.0/updater/UpdaterWidget.cpp:150
#9  0x000000000040ffc4 in MainWindow::reload (this=0x149eb60) at /build/buildd/muon-2.0.0/updater/MainWindow.cpp:198
#10 0x000000000041007a in MainWindow::transactionStatusChanged (this=0x149eb60, status=<optimized out>) at /build/buildd/muon-2.0.0/updater/MainWindow.cpp:166
[...]
#12 0x00007f4cf50a9681 in QApt::Transaction::statusChanged (this=<optimized out>, _t1=QApt::FinishedStatus) at /build/buildd/qapt-2.0.0/obj-x86_64-linux-gnu/src/moc_transaction.cxx:285