Properly asynchronize the reloading of the APT backend, fixing a crash.

BUG:313485
FIXED-IN:2.0.0